--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 **/.ipynb_checkpoints
 /models/*.safetensors
 /weights/*.safetensors
+/target
+.DS_Store
+**/.ipynb_checkpoints
+/models/*.safetensors
+/weights/*.safetensors
